^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed issue #16194: Files displayed URL encoded in WebDAV clients.
- Fixed issue #16201: Introduced new Nautilus compatible transport class to
  fix client specific issues.
- Fixed issue #16034: The permissions on the lock file in ezcWebdavFileBackend
  are now properly checked before a lock is acquired.

1.1.3 - Monday 09 November 2009
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed issue #15430: Dead property retrieval works correctly now in
  ezcWebdavFileBackend.
- Fixed issue #15431: Fixed detection of HTTP/HTTPS in
  ezcWebdavAutomaticPathFactory.
- Fixed issue #15434: Corrected error in example code.
- Fixed issue #15477: Using the property storage file name in the file
  back-end path works now properly.


1.1.2 - Tuesday 01 September 2009
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed issue #15368: Corrected and enhanced documentation of ezcWebdavServer
  regarding configuration handling.


1.1.1 - Monday 08 June 2009
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed issue #13324: Uploads are now working in Konqueror (tested 3.5.10).
  Fix based on a patch by Erwin Eggenberger.


1.1 - Monday 05 January 2009
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- No changes


1.1rc1 - Monday 15 December 2008
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed issue 13251#: Tested Webdav component with BitKinex 3.0.2. Works fine,
  except for locking, which seems to be broken in the client (same problems
  with Apache mod_dav).


1.1beta1 - Monday 01 December 2008
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- No changes


1.1alpha1 - Monday 17 November 2008
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
