@@ -6,6 +6,10 @@
   fix client specific issues.
 - Fixed issue #16034: The permissions on the lock file in ezcWebdavFileBackend
   are now properly checked before a lock is acquired.
+- Fixed issue #15922: The default lock timeout in ezcWebdavFileBackend is not
+  2 seconds. After this time, a hanging lock will automatically be released.
+  This timeout can now be configured through the new option
+  ezcWebdavFileBackendOptions->lockTimeout.
 
 1.1.3 - Monday 09 November 2009
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
